# iris-mcp

./: .gitignore  BUILD.md  Cargo.toml  Makefile  README.md  build-release.sh  build-with-zig.sh
.github/workflows/: release.yml
examples/: client_example.py  monitor_demo.sh  monitor_probe.rs  test_keyboard.py
src/: keyboard.rs  lib.rs  main.rs  monitor_keyboard.rs  monitor_mouse.rs  monitor_screen.rs  mouse.rs  server.rs  server_old.rs.bak
src/monitor/: key_mouse.rs  mod.rs  screen.rs  state.rs
src/operator/: keyboard.rs
src/server/: jsonrpc.rs  keyboard.rs  mod.rs  monitor.rs  mouse.rs  tools_list.rs
tests/: monitor_screen_macos_tests.rs  operator_keyboard_tests.rs  server_integration.rs
