[package]
name = "iris-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5"
base64 = "0.22"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
